manifests/predictive-service/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fbi-ucr
  namespace: fbi-ucr
  labels:
    app.kubernetes.io/name: fbi-ucr
    app.kubernetes.io/component: inference
    app.kubernetes.io/part-of: fbi-ucr-demo
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: fbi-ucr
